[package]
name = "fastrue"
version = "0.0.3"
description = "Fastrue is a headless authentication server, inspired from Netlify GoTrue."
repository = "https://github.com/riipandi/fastrue"
authors = ["Aris Ripandi <aris@duck.com>"]
categories = ["web-programming::http-server", "authentication"]
keywords = ["oauth", "server", "oauth2", "jwt"]
license = "Apache-2.0"
rust-version = "1.69"
edition = "2021"
publish = false
build = "build.rs"

[package.metadata.cargo-machete]
ignored = ["jsonwebtoken", "reqwest"]

[dependencies]
bcrypt = { version = "^0.14" }
build-time = "0.1.3"
chrono = { version = "^0.4.23", default-features = false, features = ["clock", "serde"] }
clap = { version = "^4.0", features = ["derive"] }
cookie = { version = "^0.17" }
dialoguer = { version ="^0.10", features = ["password", "zeroize"] }
dotenvy = { version = "^0.15" }
fastrand = { version = "^1.8" }
futures = { version = "0.3" }
indicatif = { version = "^0.17.2", features = ["tokio"] }
jsonwebtoken = {version = "^8", default-features = false }
lettre = { version = "^0.10", default-features = false, features = ["smtp-transport", "pool", "tokio1-rustls-tls", "hostname", "builder"] }
once_cell = { version = "^1.17" }
reqwest = { version = "^0.11", optional = true, default-features = false, features = ["blocking"] }
rust-embed = { version = "^6.6.1", features = ["include-exclude", "salvo-ex"] }
salvo = { version = "0.42", features = ["affix", "anyhow", "catch-panic", "cors", "proxy", "logging", "serve-static", "size-limiter", "oapi"] }
sea-query = { version = "0.28.5", features = ["backend-postgres", "chrono", "with-uuid", "with-json", "with-chrono"] }
sea-query-binder = { version = "0.3.1", features = ["with-chrono", "sqlx-postgres", "with-json", "with-uuid", "runtime-tokio-rustls", "with-rust_decimal"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
sqlx = { version = "^0.6", features = ["runtime-tokio-rustls", "migrate", "postgres", "uuid", "chrono", "json", "uuid", "offline"] }
tokio = { version = "^1.28", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
uuid = { version = "^1.3.3", features = ["v4", "fast-rng", "serde"] }
url = { version = "2.3", features = ["serde"] }
tsync = { version = "1.7" }

[dev-dependencies]

[build-dependencies]
rust-embed = { version = "6.6", features = ["include-exclude", "salvo-ex"] }

# Reduce the Rust binary size and reduces the size of the images further.
# https://kerkour.com/optimize-rust-binary-size
[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
debug = false
strip = "debuginfo"
opt-level = 3
lto = true

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1
