[package]
name = "fastrue"
version = "0.0.3"
description = "Fastrue is a headless authentication server, inspired from Netlify GoTrue."
repository = "https://github.com/riipandi/fastrue"
authors = ["Aris Ripandi <aris@duck.com>"]
categories = ["web-programming::http-server", "authentication"]
keywords = ["oauth", "server", "oauth2", "jwt", "token"]
license = "Apache-2.0"
rust-version = "1.69"
edition = "2021"
publish = false
build = "build.rs"

# This is recomendation from cargo-diet
include = ["src/**/*", "LICENSE-*", "README.md", "build.rs"]

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.68" }
axum = { version = "0.6", features = ["tracing"] }
# bcrypt = { version = "^0.14" }
build-time = { version = "0.1.3" }
chrono = { version = "^0.4.23", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.0", features = ["derive"] }
cuid = "1.3.1"
dialoguer = { version ="^0.10", features = ["password", "zeroize"] }
dotenvy = { version = "^0.15" }
fastrand = { version = "^1.8" }
# indicatif = { version = "^0.17", features = ["tokio"] }
# lettre = { version = "^0.10", default-features = false, features = ["smtp-transport", "pool", "tokio1-rustls-tls", "hostname", "builder"] }
mime_guess = "2.0.4"
# jsonwebtoken = {version = "^8", default-features = false }
password-auth = { version = "0.1.1", features = ["pbkdf2"] }
rust-embed = { version = "6.6", features = ["include-exclude", "axum-ex"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "^0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "offline", "macros", "migrate"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = ["tokio"] }
tower-http = { version = "0.4.0", features = ["cors", "timeout", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
# tsync = { version = "1.7" }
# ureq = { version = "2.6", features = ["json", "charset"] }
uuid = { version = "^1.3", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]

[build-dependencies]
rust-embed = { version = "6.6", features = ["include-exclude", "axum-ex"] }

# Reduce the Rust binary size and reduces the size of the images further.
# https://kerkour.com/optimize-rust-binary-size
[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
debug = false
strip = "debuginfo"
opt-level = 3
lto = true

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1

[profile.dev.package.sqlx-macros]
opt-level = 3
