[package]
name = "fastrue"
version = "0.0.4"
description = "Fastrue is a headless authentication server, inspired from Netlify GoTrue."
repository = "https://github.com/riipandi/fastrue"
authors = ["Aris Ripandi <aris@duck.com>"]
categories = ["web-programming::http-server", "authentication"]
keywords = ["oauth", "server", "oauth2", "jwt", "token"]
license = "Apache-2.0"
rust-version = "1.70"
edition = "2021"
publish = false
build = "build.rs"

# This is recomendation from cargo-diet
include = ["src/**/*", "LICENSE-*", "README.md", "build.rs"]

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.68" }
axum = { version = "0.6", features = ["tracing"] }
build-time = { version = "0.1.3" }
chrono = { version = "^0.4.23", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.0", features = ["derive"] }
dialoguer = { version ="^0.10", features = ["password", "zeroize"] }
dotenvy = { version = "^0.15" }
getrandom = { version = "^0.2" }
# indicatif = { version = "^0.17", features = ["tokio"] }
# lettre = { version = "^0.10", default-features = false, features = ["smtp-transport", "pool", "tokio1-rustls-tls", "hostname", "builder"] }
mime_guess = { version = "2.0.4" }
nano-id = { version = "0.3" }
# jsonwebtoken = {version = "^8.3", default-features = false }
password-auth = { version = "0.1.1", default-features = false, features = ["pbkdf2"] }
rust-embed = { version = "6.7", features = ["include-exclude", "axum-ex"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "^0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "offline", "macros", "migrate"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = ["tokio"] }
tower-http = { version = "0.4.0", features = ["cors", "timeout", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
# tsync = { version = "1.7" }
# ureq = { version = "2.6", features = ["json", "charset"] }
uuid = { version = "^1.3", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]

[build-dependencies]
rust-embed = { version = "6.7", features = ["include-exclude", "axum-ex"] }

[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
debug = false
strip = true
opt-level = 3
lto = true

[profile.dev]
strip = "debuginfo"
split-debuginfo = "unpacked"
opt-level = 1

[profile.dev.package.sqlx-macros]
opt-level = 3
